--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@ footer > div >dir
 		<a href="#" id="az"class="fa fa-instagram"></a>
 		<a href="#" id="az"class="fa fa-google"></a>
 		<a href="#" id="az"class="fa fa-rss"></a>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5754620442993814",
+    enable_page_level_ads: true
+  });
+</script>
 		<img class="logoimg"align="right"src="images/1.png">
 		<div align="right"class="beauté">
 			<a href=""><button>الابلاغ عن مشكلة</button></a>
