--- a/index.html
+++ b/index.html
@@ -2,293 +2,94 @@
 <html>
 <head>
 	<style type="text/css">
-table {
-  border-spacing: 0;
-  width: 45%;
-  border: 1px solid #ddd;
-  text-align:center;
-}
-
-th, td {
-  text-align: left;
-  padding: 16px;
-  text-align:center;
-}
-
-tr:nth-child(even) {
-  background-color: #f2f2f2
-}
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-google {
-  background: #dd4b39;
-  color: white;
-}
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-.fa-rss {
-  background: #ff6600;
-  color: white;
-}
-*
-{
-	margin:0;
-	padding:0;
-}
-.beauté
-{
-	width:100%;
-	height:50px;
-	background-color:#5c5c5c;
-	margin-top:100px;
-}
-.beauté > a > button 
-{
-	color:white;
-	font-size:20px;
-	height:30px;
-	background-color:#5c5c5c;
-	border:#5c5c5c 1px solid;
-	padding:10px;
-}
-.beauté > a > span>button
-{
-	color:white;
-	font-size:20px;
-	height:50px;
-	background-color:#24292d;
-	border:#24292d 1px solid;
-	padding:10px;
-	padding-bottom:20px;
-	margin-right:0;
-}
-.beauté > a > button:hover
-{
-	color:white;
-	font-size:20px;
-	height:50px;
-	background-color:#24292d;
-	border:#24292d 1px solid;
-	padding:10px;
-	padding-bottom:20px;
-
-}
-.beautq
-{
-	width:100%;
-	height:30px;
-	background-color:#5c5c5c;	
-}
-.logoimg
-{
-	margin-right:90px;
-}
-.navbar > a
-{
-	margin-left:20px;
-}
-#az
-{
-	margin-top:30px;
-}
-th
-{
-	font-size:40px;
-}
-td
-{
-	direction:right;
-	font-size:20px;
-}
-tr:hover
-{
-	direction:right;
-	font-size:0px;
-	background-color:gray;
-}
-td > a > button
-{
-	background-color:#676767;
-	border:#676767 1px solid;
-	padding:8px;
-	font-size:15px;
-	color:white;
-}
-body
-{
-	text-align:left;
-}
-table
-{
-	margin:60px;
-	margin-right:40px;
-	margin-left:0.5cm;
-  width:90%;
-  margin:60px;
-
-}
-footer
-{
-  background-color: #5c5c5c;
-  padding:30px;
-  font-size:20px;
-}
-footer > span
-{
-  color:red;
-  font-size:30px;
-}
-footer > div
-{
-  text-align:right;
-}
-footer > div >dir
-{
-  text-align:left;
-}
+		*{
+			padding:0;
+			margin:0;
+			background-color:#edecea;
+		}
+		img{
+			margin:25px;
+		}
+		.navbar > div{
+			width:100%;
+			background-color: #7c7c7c;
+		}
+		.navbare{
+			width:100%;
+			height:40px;
+			background-color:#7c7c7c;
+		}
+		.navbar  >div > a >button{
+			width:10%;
+			height:40px;
+			background-color:#7c7c7c;
+			border:1px solid #7c7c7c;
+			color:white;
+			font-size:20px;
+			padding:0px
+		}
+		.navbar  >div > a >button:hover{
+			background-color:#aaa9a9;
+		}
+		#az{
+			width: 5%;
+		}
+		#ae{
+			width:14%;
+			border:1px 	solid #7c7c7c;
+		}
+		#ac{
+			width:6%;
+			background-color:#aaa9a9;
+		}
+		p{
+			width:80%;
+		}
+		.content > div{
+			width:95%;
+			margin:3%;
+			font-size:20px;
+			margin-top:20px;
+		}
 	</style>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Mobarayat Tv</title>
+	<title>Go4hacking</title>
 </head>
 <body>
 	<div class="navbar">
-		<div class="beautq"></div><br>
-		<a href="#" id="az" class="fa fa-facebook"></a>
-		<a href="#" id="az"class="fa fa-twitter"></a>
-		<a href="#" id="az"class="fa fa-youtube"></a>
-		<a href="#" id="az"class="fa fa-instagram"></a>
-		<a href="#" id="az"class="fa fa-google"></a>
-		<a href="#" id="az"class="fa fa-rss"></a>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-5754620442993814",
-    enable_page_level_ads: true
-  });
-</script>
-		<img class="logoimg"align="right"src="images/1.png">
-		<div align="right"class="beauté">
-			<a href=""><button>الابلاغ عن مشكلة</button></a>
-			<a href=""><button>رالسلنا</button></a>
-			<a href=""><button>من نحن</button></a>
-			<a href=""><button>القنوات</button></a>
-			<a href=""><span><button>الرئيسية</button></span></a>
-		</div>
-		<div class="samim">
-      <dir style="text-align: right;padding:50px 60px 0px;font-size:20px;padding-bottom:0">ملحوظة:ادا لم تنطلق المباراة فلاداعي الاضغط على"مشاهدة المباراة" فلن تعمل</dir>
-<table align="center" id="myTable">
-  <tr>
-    <th></th>
-    <span><th >مباريات اليوم</th></span>
-  </tr>
-  
-  	<tr>
-    
-    	<td><!--match 1-->
-    		<img src="https://cdn.countryflags.com/thumbs/morocco/flag-round-250.png"width="64px">
-    	</td>
-    	<td>
-    		<img src="https://upload.wikimedia.org/wikipedia/fr/e/e3/CAN_2010.png"width="50px"><br>22/3/2019<br>14:00<br>
-    		<a href="bein1.html"><button>مشاهدة المباراة</button></a>
-    	</td>
-    	<td>
-    		<img width="64px" src="https://cdn4.iconfinder.com/data/icons/flat-country-flag/512/658384-Malawi-512.png"></td>
-  		</tr>
-      <!--match 2 -->
-  		<tr>
-    	<td>
-    		<img  src="https://ssl.gstatic.com/onebox/media/sports/logos/paYnEE8hcrP96neHRNofhQ_64x64.png">
-    	</td>
-    	<td>
-    		<img width="50px"src="https://lh3.googleusercontent.com/usoXYLyAWMVUse76efh6h4Hq3NNo9YO2idzd0kMhT7YTv7fOteeUy_hTwf5lRVwqP_3Zfg=s85"><br>29/3/2019<br>16:15<br>
-    		<a href=""><button>مشاهدة المباراة</button></a>
-    	</td>
-    	<td>
-    		<img src="https://ssl.gstatic.com/onebox/media/sports/logos/TKitIqelDyN6M-kYt4Uc0g_64x64.png">
-    	</td>
-  		</tr>
-      <!--match 3 -->
-  	<tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/srAAE0bOnCppUrlbJpFiHQ_64x64.png"></td>
-    <td><img width="50px"src="https://lh3.googleusercontent.com/usoXYLyAWMVUse76efh6h4Hq3NNo9YO2idzd0kMhT7YTv7fOteeUy_hTwf5lRVwqP_3Zfg=s85"><br>30/3/2019<br>20:45<br><a href=""><button>مشاهدة المباراة</button></a></td>	
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/meAnutdPID67rfUecKaoFg_64x64.png"></td>
-  </tr>
-  <!--match 4-->
-  	<tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Th4fAVAZeCJWRcKoLW7koA_64x64.png"></td>
-    <td><img width="50px"src="https://lh3.googleusercontent.com/usoXYLyAWMVUse76efh6h4Hq3NNo9YO2idzd0kMhT7YTv7fOteeUy_hTwf5lRVwqP_3Zfg=s85"><br>31/3/2019<br>19:45<br><a href=""><button>مشاهدة المباراة</button></a></td>	
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/S72MCTiOGlQRhTfHW0uf9A_64x64.png"></td>
-  </tr>
-  <!--match 5 -->
-  	<tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/z44l-a0W1v5FmgPnemV6Xw_64x64.png"></td>
-    <td><img src="https://lh3.googleusercontent.com/GYwmH8u62LrhVUoiPPvcQ49zcoN11U4P7uoo2AC71DJWQcjbvkn56EHn6Vv76ht0LVSpSME=s85"width="50px"><br>30/3/2019<br>13:30<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Gh7_5p3n364p4vxeM8FhNg_64x64.png"></td>
-  </tr>
-  <tr>
-  <!--match 6 -->
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/udQ6ns69PctCv143h-GeYw_64x64.png"></td>
-    <td><img src="https://lh3.googleusercontent.com/GYwmH8u62LrhVUoiPPvcQ49zcoN11U4P7uoo2AC71DJWQcjbvkn56EHn6Vv76ht0LVSpSME=s85"width="50px"><br>30/3/2019<br>16:00<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/lHr1L31i7aJS-O8tUdHOIQ_64x64.png"></td>
-  </tr>
-  <tr>
-<!--match 7-->
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/fhBITrIlbQxhVB6IjxUO6Q_64x64.png"></td>
-    <td><img src="https://lh3.googleusercontent.com/GYwmH8u62LrhVUoiPPvcQ49zcoN11U4P7uoo2AC71DJWQcjbvkn56EHn6Vv76ht0LVSpSME=s85"width="50px"><br>30/3/2019<br>14:05<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/mTDxrTqWa4SqI0rCi5LhqA_64x64.png"></td>
-  </tr>
-  <!--match 8 -->
-  <tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/k3Q_mKE98Dnohrcea0JFgQ_64x64.png"></td>
-    <td><img src="https://lh3.googleusercontent.com/GYwmH8u62LrhVUoiPPvcQ49zcoN11U4P7uoo2AC71DJWQcjbvkn56EHn6Vv76ht0LVSpSME=s85"width="50px"><br>31/3/2019<br>16:30<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/0iShHhASp5q1SL4JhtwJiw_64x64.png"></td>
-  </tr>
-  <!--match 9-->
-  <tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/4us2nCgl6kgZc0t3hpW75Q_64x64.png"></td>
-    <td><img src="https://lh3.googleusercontent.com/GYwmH8u62LrhVUoiPPvcQ49zcoN11U4P7uoo2AC71DJWQcjbvkn56EHn6Vv76ht0LVSpSME=s85"width="50px"><br>31/3/2019<br>20:00<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/96CcNNQ0AYDAbssP0V9LuQ_64x64.png"></td>
-  </tr>
-  <!--match 10 --><!--
-  <tr>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/z44l-a0W1v5FmgPnemV6Xw_64x64.png"></td>
-    <td><img src="images/18.png"><br>الدوري الايطالي<br>14:00<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Gh7_5p3n364p4vxeM8FhNg_64x64.png"></td>
-  </tr>
-  <tr>
-<!--mach11--><!--
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/z44l-a0W1v5FmgPnemV6Xw_64x64.png"></td>
-    <td><img src="images/18.png"><br>الدوري الايطالي<br>14:00<br><a href=""><button>مشاهدة المباراة</button></a></td>
-    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/Gh7_5p3n364p4vxeM8FhNg_64x64.png"></td>
-  </tr>-->
+		<div class="navbare">                 </div>
+	<img width="300px" src="maxresdefault.jpg">	
+	<div>
+		<a href=""><button id="ac">Home</button></a>
+		<a href=""><button>Kali Linux</button></a>
+		<a href=""><button id="az">CEH</button></a>
+		<a href=""><button>Beginner</button></a>
+		<a href=""><button>Wifi Hacking</button></a>
+		<a href=""><button id="ae">Email Hacking</button></a>
+		<a href=""><button id="ae">Facebook Hacking</button></a>
+	</div>
+	</div>
+	<div class="content">
+		<div><br><br>
+			<img style="width:512px" src="index.jpg" align="right">
+		<h1>What is hacking</h1>
+		<p>
+		Hacking can be like hacking. In this case, it is a practice aimed at a "discreet" exchange of illegal or personal information. This practice, established by hackers, appears with the first home computers. Hacking can also be defined as a set of techniques for exploiting the vulnerabilities and weaknesses of an element or group of material or human elements.</p><br><br><br><br><br><br>
+		<br>
+		<br><br>
+			<img style="width:512px" src="4.jpg" align="left">
+		<h1>How to be a hacker?</h1>
+		<p>
+		To be a hacker you must : <br>
+		1-Learn Kali Linux basic.<br>
+		2-Learn Hacking tool.<br>
+		3-Learn Systems (Windows - Mac OS - Kali Linux)<br>
+		4-Be serouis<br>
+		5-Practice lesson from go4haking<br>
+		</p></div></div>
+<br><br><br><br><br><br><br><br>
+		<footer style="background-color:gray;width:100%;font-size:20px;padding:20px;color:white">All right reserved for go4haking</footer>
+
+			
+	
 </body>
 </html>
